--- a/order.html
+++ b/order.html
@@ -8,35 +8,40 @@
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
-body,html{
+html,body{
   height:100%;
   font-family:'Montserrat',sans-serif;
   overflow-x:hidden;
 }
 
-/* Background */
+/* Background Video */
 .video-bg{
   position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
   object-fit:cover;
   z-index:-2;
 }
+
 .overlay{
   position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
-  background:rgba(0,0,0,0.5);
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,0.6);
   z-index:-1;
 }
 
 /* Title */
 .page-title{
-  margin-top:100px;
+  margin-top:110px;
   text-align:center;
-  color:white;
   font-size:6vw;
-  text-shadow:0 0 15px red;
+  color:white;
+  text-shadow:0 0 10px red;
 }
 
 /* Form */
@@ -48,14 +53,11 @@ body,html{
   padding:25px;
   border-radius:20px;
   color:white;
-  backdrop-filter:blur(10px);
-  animation:fadeUp 0.8s ease;
 }
 
 .order-form label{
   display:block;
   margin-top:15px;
-  font-size:0.9rem;
 }
 
 .order-form input,
@@ -79,60 +81,21 @@ body,html{
   color:white;
   font-weight:bold;
   cursor:pointer;
-  transition:0.3s;
 }
+
 .order-form button:hover{
   background:#3399ff;
-  transform:scale(1.03);
 }
 
-/* Price Display */
-.price-display{
-  margin-top:10px;
-  font-size:0.85rem;
-  opacity:0.8;
-}
-
-/* WhatsApp */
-.whatsapp{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  background:#25D366;
-  padding:12px 18px;
-  border-radius:30px;
-  color:white;
-  text-decoration:none;
-  font-size:0.8rem;
-  z-index:10;
-}
-
-/* VC Ball */
-.vc-ball{
-  position:absolute;
-  width:60px;
-  height:60px;
-  background:white;
-  border-radius:50%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-weight:bold;
-  color:#0066ff;
-  z-index:8;
-}
-
-/* Animation */
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(40px);}
-  to{opacity:1;transform:translateY(0);}
-}
-
+/* Mobile */
 @media(max-width:600px){
-  .page-title{font-size:8vw;}
+  .page-title{
+    font-size:8vw;
+  }
 }
 </style>
 </head>
+
 <body>
 
 <video autoplay muted loop playsinline class="video-bg">
@@ -151,18 +114,28 @@ body,html{
 <input type="email" name="email" required>
 
 <label>Select Service</label>
-<select name="service" id="service" onchange="updateServiceInfo()">
+<select name="service" id="service" onchange="toggleOther()">
+
 <option value="" disabled selected>Choose a service</option>
+
 <option value="Graphics Design">Graphics Design</option>
 <option value="Logo Design">Logo Design</option>
 <option value="Flyer Design">Flyer Design</option>
+<option value="Poster Design">Poster Design</option>
+<option value="Brochure Design">Brochure Design</option>
+<option value="Business Card Design">Business Card Design</option>
+<option value="Social Media Design">Social Media Design</option>
+
 <option value="Web Design">Web Design</option>
+<option value="Website Development">Website Development</option>
+<option value="Landing Page Design">Landing Page Design</option>
+
 <option value="Brand Identity Design">Brand Identity Design</option>
 <option value="UI/UX Design">UI/UX Design</option>
-<option value="Other">Other</option>
-</select>
 
-<div id="price" class="price-display"></div>
+<option value="Other">Other</option>
+
+</select>
 
 <div id="otherField" style="display:none;">
 <label>Specify Service</label>
@@ -176,61 +149,32 @@ body,html{
 
 </form>
 
-<a href="https://wa.me/2349069205351" class="whatsapp" target="_blank">
-Message on WhatsApp
-</a>
-
-<div class="vc-ball" id="vcBall">VC</div>
-
 <script>
 
-/* Service Pricing */
-const prices = {
-"Graphics Design":"Starting from ₦10,000",
-"Logo Design":"Starting from ₦15,000",
-"Flyer Design":"Starting from ₦8,000",
-"Web Design":"Starting from ₦40,000",
-"Brand Identity Design":"Starting from ₦25,000",
-"UI/UX Design":"Starting from ₦30,000"
-};
-
-function updateServiceInfo(){
-const service=document.getElementById("service").value;
-const priceDiv=document.getElementById("price");
-const other=document.getElementById("otherField");
-
-if(service==="Other"){
-other.style.display="block";
-priceDiv.innerHTML="";
-}else{
-other.style.display="none";
-priceDiv.innerHTML=prices[service] || "";
-}
+/* Show Other Field */
+function toggleOther(){
+  const service=document.getElementById("service").value;
+  const other=document.getElementById("otherField");
+  if(service==="Other"){
+    other.style.display="block";
+  }else{
+    other.style.display="none";
+  }
 }
 
-/* Auto Fill from URL */
+/* Auto Select Service From URL */
 window.onload=function(){
-const params=new URLSearchParams(window.location.search);
-const service=params.get("service");
-if(service){
-document.getElementById("service").value=service;
-updateServiceInfo();
-}
-};
+  const params=new URLSearchParams(window.location.search);
+  const selected=params.get("service");
 
-/* VC Ball Animation */
-const ball=document.getElementById("vcBall");
-let x=100,y=200,dx=2,dy=2;
-function move(){
-x+=dx;y+=dy;
-if(x<0||x+60>window.innerWidth)dx*=-1;
-if(y<0||y+60>window.innerHeight)dy*=-1;
-ball.style.transform=`translate(${x}px,${y}px)`;
-requestAnimationFrame(move);
-}
-move();
+  if(selected){
+    const dropdown=document.getElementById("service");
+    dropdown.value=selected;
+    toggleOther();
+  }
+};
 
 </script>
 
 </body>
-  </html>
+</html>
