--- a/index.html
+++ b/index.html
@@ -12,184 +12,179 @@
 
 /* RESET */
 *{
-margin:0;
-padding:0;
-box-sizing:border-box;
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 }
 
 html,body{
-height:100%;
-width:100%;
-overflow-x:hidden;
-font-family:'Montserrat',sans-serif;
-background:black;
+  height:100%;
+  width:100%;
+  overflow-x:hidden;
+  font-family:'Montserrat',sans-serif;
+  background:black;
 }
 
 /* FADE IN BODY */
 body{
-opacity:0;
-animation:fadeIn 1.2s ease forwards;
+  opacity:0;
+  animation:fadeIn 1.2s ease forwards;
 }
 @keyframes fadeIn{
-to{opacity:1;}
+  to{opacity:1;}
 }
 
 /* ====================== */
-/* TOP NAVIGATION BAR */
+/* HAMBURGER MENU */
 /* ====================== */
-.top-bar{
-position:fixed;
-top:0;
-left:0;
-width:100%;
-height:70px;
-background:black;
-display:flex;
-align-items:center;
-justify-content:flex-end;
-padding-right:25px;
-z-index:10;
-border-bottom:3px solid white;
-box-shadow:0 5px 15px white;
-}
-
-/* Hamburger Icon */
 .menu-icon{
-width:35px;
-height:25px;
-display:flex;
-flex-direction:column;
-justify-content:space-between;
-cursor:pointer;
+  position:fixed;
+  top:20px;
+  right:20px;
+  width:30px;
+  height:20px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  cursor:pointer;
+  z-index:10;
 }
 
 .menu-icon div{
-height:4px;
-background:white;
-border-radius:2px;
+  height:3px;
+  background:white;
+  border-radius:2px;
 }
 
-/* Side Menu */
+/* SIDE MENU */
 .side-menu{
-position:fixed;
-top:0;
-right:-250px;
-width:250px;
-height:100%;
-background:#111;
-padding-top:90px;
-transition:0.4s ease;
-z-index:20;
+  position:fixed;
+  top:0;
+  right:-220px;
+  width:220px;
+  height:100%;
+  background:#111;
+  padding-top:70px;
+  transition:0.4s ease;
+  z-index:20;
 }
 
 .side-menu a{
-display:block;
-color:white;
-padding:15px 30px;
-text-decoration:none;
+  display:block;
+  color:white;
+  padding:15px 25px;
+  text-decoration:none;
 }
 
 .side-menu a:hover{
-background:red;
+  background:red;
 }
 
 /* ====================== */
 /* VIDEO BACKGROUND */
 /* ====================== */
 .video-bg{
-position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-object-fit:cover;
-z-index:-2;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  z-index:-2;
 }
 
 .overlay{
-position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:rgba(0,0,0,0.6);
-z-index:-1;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,0.6);
+  z-index:-1;
 }
 
 /* ====================== */
 /* MAIN CONTENT */
 /* ====================== */
 .container{
-display:flex;
-flex-direction:column;
-align-items:center;
-justify-content:center;
-min-height:100vh;
-text-align:center;
-padding:20px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  min-height:100vh;
+  text-align:center;
+  padding:20px;
 }
 
 /* GRAFFITI LOGO */
 .logo{
-font-family:'Permanent Marker',cursive;
-font-size:clamp(40px,10vw,80px);
-color:white;
-animation:glow 2s infinite alternate;
-letter-spacing:2px;
-margin-bottom:10px;
-transition:0.3s;
+  font-family:'Permanent Marker',cursive;
+  font-size:clamp(40px,10vw,80px);
+  color:white;
+  animation:glow 2s infinite alternate;
+  letter-spacing:2px;
+  margin-bottom:10px;
 }
 
 /* TAGLINE */
 .tagline{
-font-family:'Montserrat',sans-serif;
-font-size:clamp(14px,4vw,20px);
-color:white;
-margin-top:5px;
-max-width:90%;
+  font-family:'Montserrat',sans-serif;
+  font-size:clamp(14px,4vw,20px);
+  color:white;
+  margin-top:5px;
+  max-width:90%;
 }
 
 /* BUTTON */
 .main-btn{
-margin-top:30px;
-padding:12px 30px;
-background:white;
-color:black;
-border:none;
-border-radius:30px;
-font-size:16px;
-cursor:pointer;
-transition:0.4s;
+  margin-top:30px;
+  padding:12px 30px;
+  background:white;
+  color:black;
+  border:none;
+  border-radius:30px;
+  font-size:16px;
+  cursor:pointer;
+  transition:0.4s;
 }
 
 .main-btn:hover{
-background:red;
-color:white;
-transform:scale(1.05);
+  background:red;
+  color:white;
+  transform:scale(1.05);
 }
 
 /* GLOW ANIMATION COLORS */
 @keyframes glow{
-0%{text-shadow:0 0 10px #ff0000,0 0 20px #ff0000;}
-20%{text-shadow:0 0 10px #00ff00,0 0 20px #00ff00;}
-40%{text-shadow:0 0 10px #0000ff,0 0 20px #0000ff;}
-60%{text-shadow:0 0 10px #ffff00,0 0 20px #ffff00;}
-80%{text-shadow:0 0 10px #ff00ff,0 0 20px #ff00ff;}
-100%{text-shadow:0 0 10px #00ffff,0 0 20px #00ffff;}
+  0%{text-shadow:0 0 10px #ff0000,0 0 20px #ff0000;}
+  20%{text-shadow:0 0 10px #00ff00,0 0 20px #00ff00;}
+  40%{text-shadow:0 0 10px #0000ff,0 0 20px #0000ff;}
+  60%{text-shadow:0 0 10px #ffff00,0 0 20px #ffff00;}
+  80%{text-shadow:0 0 10px #ff00ff,0 0 20px #ff00ff;}
+  100%{text-shadow:0 0 10px #00ffff,0 0 20px #00ffff;}
 }
 
 /* MOBILE RESPONSIVE */
 @media(max-width:600px){
-.logo{
-font-size:clamp(32px,12vw,60px);
-}
-.tagline{
-font-size:clamp(12px,4vw,18px);
-}
-.main-btn{
-font-size:14px;
-padding:10px 25px;
-}
+  .logo{
+    font-size:clamp(32px,12vw,60px);
+  }
+  .tagline{
+    font-size:clamp(12px,4vw,18px);
+  }
+  .main-btn{
+    font-size:14px;
+    padding:10px 25px;
+  }
+  .menu-icon{
+    top:15px;
+    right:15px;
+    width:25px;
+    height:18px;
+  }
+  .menu-icon div{
+    height:3px;
+  }
 }
 
 </style>
@@ -201,13 +196,11 @@ padding:10px 25px;
 <video autoplay muted loop class="video-bg" id="bgVideo"></video>
 <div class="overlay"></div>
 
-<!-- TOP NAV BAR -->
-<div class="top-bar">
-  <div class="menu-icon" id="menuToggle">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+<!-- HAMBURGER MENU -->
+<div class="menu-icon" id="menuToggle">
+  <div></div>
+  <div></div>
+  <div></div>
 </div>
 
 <!-- SIDE MENU -->
@@ -229,25 +222,23 @@ padding:10px 25px;
 <script>
 // VIDEO ROTATION
 const videos = [
-"backgroundvideo1.mp4",
-"backgroundvideo2.mp4",
-"backgroundvideo3.mp4",
-"backgroundvideo4.mp4",
-"backgroundvideo5.mp4",
-"backgroundvideo6.mp4",
-"backgroundvideo7.mp4"
+  "backgroundvideo1.mp4",
+  "backgroundvideo2.mp4",
+  "backgroundvideo3.mp4",
+  "backgroundvideo4.mp4",
+  "backgroundvideo5.mp4",
+  "backgroundvideo6.mp4",
+  "backgroundvideo7.mp4"
 ];
-
 const randomVideo = videos[Math.floor(Math.random()*videos.length)];
 document.getElementById("bgVideo").src = randomVideo;
 
 // SIDE MENU TOGGLE
 const menuToggle = document.getElementById("menuToggle");
 const sideMenu = document.getElementById("sideMenu");
-
 menuToggle.addEventListener('click', ()=>{
   if(sideMenu.style.right === "0px"){
-    sideMenu.style.right = "-250px";
+    sideMenu.style.right = "-220px";
   }else{
     sideMenu.style.right = "0px";
   }
@@ -255,4 +246,4 @@ menuToggle.addEventListener('click', ()=>{
 </script>
 
 </body>
-</html>
+  </html>
