--- a/index.html
+++ b/index.html
@@ -9,190 +9,50 @@
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
 <style>
-/* RESET */
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
-
-html,body{
-  height:100%;
-  width:100%;
-  overflow-x:hidden;
-  font-family:'Montserrat',sans-serif;
-  background:black;
-}
-
-/* FADE IN BODY */
-body{
-  opacity:0;
-  animation:fadeIn 1.2s ease forwards;
-}
-@keyframes fadeIn{
-  to{opacity:1;}
-}
-
-/* HAMBURGER MENU */
-.menu-icon{
-  position:fixed;
-  top:20px;
-  right:20px;
-  width:30px;
-  height:20px;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
-  cursor:pointer;
-  z-index:10;
-}
-.menu-icon div{
-  height:3px;
-  background:white;
-  border-radius:2px;
-}
-
-/* SIDE MENU */
-.side-menu{
-  position:fixed;
-  top:0;
-  right:-220px;
-  width:220px;
-  height:100%;
-  background:#111;
-  padding-top:70px;
-  transition:0.4s ease;
-  z-index:20;
-}
-.side-menu a{
-  display:block;
-  color:white;
-  padding:15px 25px;
-  text-decoration:none;
-}
-.side-menu a:hover{
-  background:red;
-}
+*{margin:0;padding:0;box-sizing:border-box;}
+html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat',sans-serif;background:black;}
+body{opacity:0;animation:fadeIn 1.2s ease forwards;}
+@keyframes fadeIn{to{opacity:1;}}
 
 /* VIDEO BACKGROUND */
-.video-bg{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  z-index:-2;
-}
-.overlay{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:rgba(0,0,0,0.6);
-  z-index:-1;
-}
+.video-bg{position:fixed;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-2;}
+.overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);z-index:-1;}
+
+/* HAMBURGER MENU */
+.menu-icon{position:fixed;top:20px;right:20px;width:30px;height:20px;display:flex;flex-direction:column;justify-content:space-between;cursor:pointer;z-index:10;}
+.menu-icon div{height:3px;background:white;border-radius:2px;}
+.side-menu{position:fixed;top:0;right:-220px;width:220px;height:100%;background:#111;padding-top:70px;transition:0.4s ease;z-index:20;}
+.side-menu a{display:block;color:white;padding:15px 25px;text-decoration:none;}
+.side-menu a:hover{background:red;}
 
 /* MAIN CONTENT */
-.container{
+.container{display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:100vh;text-align:center;padding:20px;}
+
+/* COMPANY NAME LOGO WITHOUT GLOW */
+.logo{font-family:'Permanent Marker',cursive;font-size:clamp(40px,10vw,80px);color:white;display:flex;flex-wrap:wrap;justify-content:center;letter-spacing:2px;margin-bottom:10px;}
+.logo span{opacity:0;display:inline-block;animation:fadeInLetter 0.8s forwards;}
+@keyframes fadeInLetter{0%{opacity:0;}100%{opacity:1;}}
+
+/* WRITE-UP LINES */
+.tagline1,.tagline2{
+  font-family:'Montserrat',sans-serif;
+  font-size:clamp(16px,4vw,22px);
+  margin-top:5px;
   display:flex;
-  flex-direction:column;
-  align-items:center;
+  flex-wrap:wrap;
   justify-content:center;
-  min-height:100vh;
-  text-align:center;
-  padding:20px;
 }
-
-/* GRAFFITI LOGO */
-.logo{
-  font-family:'Permanent Marker',cursive;
-  font-size:clamp(40px,10vw,80px);
-  color:white;
-  animation:glow 2s infinite alternate;
-  letter-spacing:2px;
-  margin-bottom:10px;
-}
-
-/* FIRST WRITE-UP */
-.tagline1{
-  font-family:'Montserrat',sans-serif;
-  font-size:clamp(16px,4vw,22px);
-  color:white;
-  margin-top:5px;
-}
-
-/* SECOND WRITE-UP WITH BLACK BRUSH STROKE */
-.tagline2-container{
-  position:relative;
-  margin-top:5px;
-}
-.tagline2-container::before{
-  content:"";
-  position:absolute;
-  left:0;
-  top:50%;
-  width:100%;
-  height:40%;
-  background:black;
-  z-index:-1;
-  transform:translateY(-50%);
-  opacity:0.5;
-  border-radius:5px;
-}
-.tagline2{
-  font-family:'Montserrat',sans-serif;
-  font-size:clamp(16px,4vw,22px);
-  color:white;
-  padding:0 8px;
-}
+.tagline1 span,.tagline2 span{opacity:0;display:inline-block;animation:fadeInLetter 0.8s forwards;}
+.tagline1 span{color:#ffd700;}
+.tagline2 span{color:#00ffff;}
 
 /* VIEW SERVICES BUTTON */
-.main-btn{
-  margin-top:30px;
-  padding:12px 30px;
-  background:white;
-  color:black;
-  border:none;
-  border-radius:30px;
-  font-size:16px;
-  cursor:pointer;
-  transition:0.4s;
-}
-.main-btn:hover{
-  background:red;
-  color:white;
-  transform:scale(1.05);
-}
+.main-btn{margin-top:30px;padding:12px 30px;background:white;color:black;border:none;border-radius:30px;font-size:16px;cursor:pointer;transition:0.4s;}
+.main-btn:hover{background:red;color:white;transform:scale(1.05);}
 
 /* CURVY ARROW */
-.arrow{
-  width:50px;
-  height:50px;
-  margin-top:20px;
-  border-left:5px solid white;
-  border-bottom:5px solid white;
-  transform:rotate(-45deg);
-  animation:arrowBounce 1s infinite alternate;
-}
-
-/* GLOW ANIMATION COLORS FOR LOGO */
-@keyframes glow{
-  0%{text-shadow:0 0 10px #ff0000,0 0 20px #ff0000;}
-  20%{text-shadow:0 0 10px #00ff00,0 0 20px #00ff00;}
-  40%{text-shadow:0 0 10px #0000ff,0 0 20px #0000ff;}
-  60%{text-shadow:0 0 10px #ffff00,0 0 20px #ffff00;}
-  80%{text-shadow:0 0 10px #ff00ff,0 0 20px #ff00ff;}
-  100%{text-shadow:0 0 10px #00ffff,0 0 20px #00ffff;}
-}
-
-/* ARROW BOUNCE */
-@keyframes arrowBounce{
-  0%{transform:rotate(-45deg) translateY(0);}
-  50%{transform:rotate(-45deg) translateY(10px);}
-  100%{transform:rotate(-45deg) translateY(0);}
-}
+.arrow{width:50px;height:50px;margin-top:20px;border-left:5px solid white;border-bottom:5px solid white;transform:rotate(-45deg);animation:arrowBounce 1s infinite alternate;}
+@keyframes arrowBounce{0%{transform:rotate(-45deg) translateY(0);}50%{transform:rotate(-45deg) translateY(10px);}100%{transform:rotate(-45deg) translateY(0);}}
 
 /* MOBILE RESPONSIVE */
 @media(max-width:600px){
@@ -205,7 +65,6 @@ body{
 }
 </style>
 </head>
-
 <body>
 
 <!-- VIDEO BACKGROUND -->
@@ -214,9 +73,7 @@ body{
 
 <!-- HAMBURGER MENU -->
 <div class="menu-icon" id="menuToggle">
-  <div></div>
-  <div></div>
-  <div></div>
+  <div></div><div></div><div></div>
 </div>
 
 <!-- SIDE MENU -->
@@ -228,42 +85,39 @@ body{
 
 <!-- MAIN CONTENT -->
 <div class="container">
-  <div class="logo">Vos Créations</div>
-  <div class="tagline1">Your everyday go-to designer</div>
-  <div class="tagline2-container">
-    <div class="tagline2">Creative Design • Branding • Digital Visuals</div>
-  </div>
+  <div class="logo" id="logoText"></div>
+  <div class="tagline1" id="tagline1Text"></div>
+  <div class="tagline2" id="tagline2Text"></div>
   <div class="arrow"></div>
-  <a href="services.html">
-    <button class="main-btn">View Services</button>
-  </a>
+  <a href="services.html"><button class="main-btn">View Services</button></a>
 </div>
 
 <script>
 // VIDEO ROTATION
-const videos = [
-  "backgroundvideo1.mp4",
-  "backgroundvideo2.mp4",
-  "backgroundvideo3.mp4",
-  "backgroundvideo4.mp4",
-  "backgroundvideo5.mp4",
-  "backgroundvideo6.mp4",
-  "backgroundvideo7.mp4"
-];
-const randomVideo = videos[Math.floor(Math.random()*videos.length)];
-document.getElementById("bgVideo").src = randomVideo;
+const videos=["backgroundvideo1.mp4","backgroundvideo2.mp4","backgroundvideo3.mp4","backgroundvideo4.mp4","backgroundvideo5.mp4","backgroundvideo6.mp4","backgroundvideo7.mp4"];
+document.getElementById("bgVideo").src=videos[Math.floor(Math.random()*videos.length)];
 
 // SIDE MENU TOGGLE
-const menuToggle = document.getElementById("menuToggle");
-const sideMenu = document.getElementById("sideMenu");
-menuToggle.addEventListener('click', ()=>{
-  if(sideMenu.style.right === "0px"){
-    sideMenu.style.right = "-220px";
-  }else{
-    sideMenu.style.right = "0px";
-  }
-});
-</script>
+const menuToggle=document.getElementById("menuToggle");
+const sideMenu=document.getElementById("sideMenu");
+menuToggle.addEventListener('click',()=>{sideMenu.style.right=(sideMenu.style.right==="0px"?"-220px":"0px");});
 
+// LETTER-BY-LETTER FADE-IN
+function animateText(id,text){
+  const container=document.getElementById(id);
+  container.innerHTML="";
+  text.split("").forEach((char,i)=>{
+    const span=document.createElement("span");
+    span.textContent=char;
+    span.style.animationDelay=(i*0.05)+"s";
+    container.appendChild(span);
+  });
+}
+
+// Animate logo and write-ups
+animateText("logoText","Vos Créations");
+animateText("tagline1Text","Your everyday go-to designer");
+animateText("tagline2Text","Creative Design • Branding • Digital Visuals");
+</script>
 </body>
 </html>
